# bldc-fpga

./: .gitignore  .gitmodules  LICENSE  README.md
fpga/: bldc-fpga.gprj
fpga/src/: bldc-fpga.cst  bldc-fpga.sdc  top.sv
fpga/src/bldc/: apb2_bldc.sv  debounce.sv  encoder.sv  gate_driver_reset.sv  position_control.sv  pwm_generator.sv  speed_control.sv  table_commutator.sv  table_driver.sv  types.sv  window_counter.sv
fpga/src/gowin_empu/: gowin_empu.ipc  gowin_empu.v  gowin_empu.vo
fpga/src/gowin_pllvr/: gowin_pllvr.ipc  gowin_pllvr.mod  gowin_pllvr.v  gowin_pllvr_100mhz.ipc  gowin_pllvr_100mhz.mod  gowin_pllvr_100mhz.v
fpga/testbench/: debounce_tb.sv  gate_driver_reset_tb.sv  position_control_tb.sv  window_counter_tb.sv
mcu/: CMakeLists.txt
mcu/include/bldc/: motor.hpp
mcu/src/: CMakeLists.txt  link.ld  main.cpp  startup_gw1ns4c.s
